trying to solve overflow problem

--- a/style.css
+++ b/style.css
@@ -21,10 +21,8 @@ html {
   padding: 0;
   height: 100%;
   background-color: black;
-  overflow-y: hidden;
-  width: 100%;
-  overflow-x: hidden;
-
+  overflow: hidden;
+  max-width: 100vw;
 }
 
 .container {
